# token-dashboard

./: .gitignore  README.md  pyproject.toml
docs/: competitive-analysis.md  gui.md  project.md
docs/plans/: 2026-06-18-gui-design.md  2026-06-18-gui-implementation.md  2026-06-20-gui-memory-optimization.md
gui/: Package.swift
gui/TokenDashboard/: TokenDashboardApp.swift
gui/TokenDashboard/Adapters/: AdapterProtocol.swift  AdapterRegistry.swift  CookieHelper.swift  DeepSeekAdapter.swift  MiMoAdapter.swift  MiniMaxAdapter.swift  OpenCodeAdapter.swift  VolcArkAdapter.swift  XunfeiAdapter.swift
gui/TokenDashboard/MenuBar/: MenuBarView.swift
gui/TokenDashboard/Models/: PlanKind.swift  ProviderId.swift  QuotaUnit.swift  QuotaWindow.swift  UsageSnapshot.swift  WindowKind.swift
gui/TokenDashboard/Store/: ConfigStore.swift  CredentialStore.swift  SharedDefaults.swift  UsageFetcher.swift
gui/TokenDashboard/Views/: ProviderCardView.swift  SettingsView.swift  UsageBarView.swift
gui/TokenDashboardTests/: CredentialStoreTests.swift  DeepSeekAdapterTests.swift  MemoryMetricsTests.swift  MiMoAdapterTests.swift  MiniMaxAdapterTests.swift  ModelTests.swift  OpenCodeAdapterTests.swift  VolcArkAdapterTests.swift  XunfeiAdapterTests.swift
scripts/: mem_benchmark.sh
src/td/: __init__.py  __main__.py  cli.py  config.py  cookies.py  models.py  output.py
src/td/adapters/: __init__.py  base.py  deepseek.py  mimo.py  minimax.py  opencode.py  registry.py  volcark.py  xunfei.py
tests/: __init__.py  conftest.py  test_smoke.py
