[project]
name = "token-dashboard"
version = "0.1.0"
description = "Unified dashboard for coding plan / token plan / API quota across providers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jiangle" }]

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "keyring>=24.3.0",
    "platformdirs>=4.2.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
td = "td.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
